few changes to a few settings

--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
         "reactive",
         "hooks",
         "observer",
-        "useObserver"
+        "useObserver",
+        "MobxLocalState",
+        "useMobxLocalState"
     ],
     "lint-staged": {
         "*.{ts,js}": [
