--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
     "editor.formatOnSave": true,
     "typescript.tsdk": "./node_modules/typescript/lib",
-    "typescriptHero.imports.insertSemicolons": false,
-    "typescriptHero.imports.organizeOnSave": true,
-    "tslint.enable": true,
-    "tslint.autoFixOnSave": true,
-    "typescriptHero.imports.stringQuoteStyle": "\""
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": true
+    }
 }
