--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "main": "dist/index.js",
     "jsnext:main": "dist/index.module.js",
@@ -30,6 +30,7 @@
     "homepage": "https://mobxjs.github.io/mobx",
     "peerDependencies": {
         "mobx": "^4.0.0 || ^5.0.0",
+        "mobx-react-lite": ">=1.2.0",
         "react": "^16.8.0"
     },
     "devDependencies": {
@@ -46,6 +47,7 @@
         "lint-staged": "^8.1.5",
         "lodash": "^4.17.11",
         "mobx": "^5.9.0",
+        "mobx-react-lite": ">=1.2.0",
         "prettier": "^1.16.4",
         "react": "^16.8.5",
         "react-dom": "^16.8.5",
