--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "0.8.1",
+    "version": "0.9.0-beta",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "main": "dist/index.js",
     "jsnext:main": "dist/index.module.js",
