--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 cache: yarn
 install:
     - yarn install
-script: CI=true yarn test:travis
-after_success:
+script:
+    - CI=true yarn test:travis
     - cat ./coverage/lcov.info|./node_modules/coveralls/bin/coveralls.js
 node_js:
     - "node"
