--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "0.19.0",
+    "version": "0.20.0",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "main": "dist/index.js",
     "jsnext:main": "dist/index.module.js",
@@ -40,6 +40,7 @@
         "coveralls": "^3.0.3",
         "husky": "^1.3.1",
         "jest": "^24.5.0",
+        "jest-mock-console": "^0.4.2",
         "lint-staged": "^8.1.5",
         "mobx": "^5.9.4",
         "prettier": "^1.16.4",
