--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
 script:
     - cd packages/mobx-react-component
     - CI=true yarn test:travis
-    - cat ./coverage/lcov.info|./node_modules/coveralls/bin/coveralls.js
+    - cat ./coverage/lcov.info|../../node_modules/coveralls/bin/coveralls.js
 node_js:
     - "node"
