--- a/packages/sample-app/package.json
+++ b/packages/sample-app/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "dependencies": {
         "mobx": "^5.9.4",
-        "mobx-react-component": "^0.40.0",
+        "mobx-react-component": "latest",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
     },
