--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,14 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            // Note; this config requires node 8.4 or higher
             "type": "node",
-            "protocol": "auto",
             "request": "launch",
+            "cwd": "${workspaceRoot}/packages/mobx-react-component",
             "name": "debug unit test",
-            "stopOnEntry": false,
-            "program": "${workspaceRoot}/node_modules/jest-cli/bin/jest.js",
-            "args": ["--verbose", "-i", "${file}"],
-            "runtimeArgs": ["--nolazy"],
-            "sourceMaps": true
+            "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
+            "args": ["-i", "${fileBasename}"],
+            "skipFiles": ["<node_internals>/**/*", "${workspaceRoot}/node_modules/**/*"]
         }
     ]
 }
