--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "0.50.3",
+    "version": "0.50.4",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "main": "dist/index.js",
     "jsnext:main": "dist/index.module.js",
@@ -38,7 +38,7 @@
         "@types/react": "^16.8.10",
         "@types/react-dom": "^16.8.3",
         "coveralls": "^3.0.3",
-        "husky": "^1.3.1",
+        "husky": "^2.1.0",
         "jest": "^24.5.0",
         "jest-mock-console": "^0.4.2",
         "lint-staged": "^8.1.5",
@@ -46,7 +46,7 @@
         "prettier": "^1.16.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-testing-library": "^6.0.2",
+        "react-testing-library": "^7.0.0",
         "rimraf": "^2.6.3",
         "rollup": "^1.7.4",
         "rollup-plugin-alias": "^1.5.1",
@@ -54,7 +54,7 @@
         "rollup-plugin-node-resolve": "^4.0.1",
         "rollup-plugin-replace": "^2.1.1",
         "rollup-plugin-terser": "^4.0.4",
-        "rollup-plugin-typescript2": "^0.20.1",
+        "rollup-plugin-typescript2": "^0.21.0",
         "ts-jest": "^24.0.1",
         "tslint": "^5.14.0",
         "tslint-config-prettier": "^1.18.0",
@@ -87,6 +87,7 @@
         "package.json",
         "dist",
         "README.md",
+        "CHANGELOG.md",
         "LICENSE"
     ]
 }
