--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -33,11 +33,13 @@
         "react-dom": "^16.8.6"
     },
     "devDependencies": {
+        "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^24.0.11",
         "@types/node": "^11.12.2",
         "@types/react": "^16.8.10",
         "@types/react-dom": "^16.8.3",
         "coveralls": "^3.0.3",
+        "hoist-non-react-statics": "^3.3.0",
         "husky": "^2.1.0",
         "jest": "^24.5.0",
         "jest-mock-console": "^0.4.2",
