--- a/packages/sample-app/package.json
+++ b/packages/sample-app/package.json
@@ -1,10 +1,10 @@
 {
     "name": "mobx-react-component-sample-app",
-    "version": "0.1.0",
+    "version": "0.52.0",
     "private": true,
     "dependencies": {
         "mobx": "^5.9.4",
-        "mobx-react-component": "^0.51.0",
+        "mobx-react-component": "*",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
     },
