--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -19,8 +19,9 @@
         "test": "jest --watch",
         "test:travis": "yarn validate && yarn lint && yarn coverage",
         "coverage": "jest --coverage",
-        "prebuild": "rimraf dist",
-        "build": "node build-rollup.js"
+        "prebuild": "rimraf dist && copydocs",
+        "build": "node build-rollup.js",
+        "copydocs": "ncp *.md ../.."
     },
     "author": "Javier González Garcés",
     "license": "MIT",
@@ -35,7 +36,7 @@
     "devDependencies": {
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^24.0.11",
-        "@types/node": "^11.12.2",
+        "@types/node": "^12.0.0",
         "@types/react": "^16.8.10",
         "@types/react-dom": "^16.8.3",
         "coveralls": "^3.0.3",
@@ -45,6 +46,7 @@
         "jest-mock-console": "^0.4.2",
         "lint-staged": "^8.1.5",
         "mobx": "^5.9.4",
+        "ncp": "^2.0.0",
         "prettier": "^1.16.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -81,7 +83,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged"
+            "pre-commit": "lint-staged && copydocs"
         }
     },
     "dependencies": {},
