--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -44,7 +44,6 @@
         "husky": "^2.1.0",
         "jest": "^24.5.0",
         "jest-mock-console": "^0.4.2",
-        "lint-staged": "^8.1.5",
         "mobx": "^5.9.4",
         "ncp": "^2.0.0",
         "prettier": "^1.16.4",
@@ -75,15 +74,9 @@
         "observer",
         "mobxObserver"
     ],
-    "lint-staged": {
-        "*.{ts,js}": [
-            "prettier --write",
-            "git add"
-        ]
-    },
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged && copydocs"
+            "pre-commit": "yarn validate && yarn lint & yarn copydocs"
         }
     },
     "dependencies": {},
