--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -19,9 +19,9 @@
         "test": "jest --watch",
         "test:travis": "yarn validate && yarn lint && yarn coverage",
         "coverage": "jest --coverage",
-        "prebuild": "rimraf dist && copydocs",
+        "prebuild": "rimraf dist && yarn copydocs",
         "build": "node build-rollup.js",
-        "copydocs": "ncp *.md ../.."
+        "copydocs": "shx cp *.md ../.."
     },
     "author": "Javier González Garcés",
     "license": "MIT",
@@ -45,7 +45,6 @@
         "jest": "^24.5.0",
         "jest-mock-console": "^0.4.2",
         "mobx": "^5.9.4",
-        "ncp": "^2.0.0",
         "prettier": "^1.16.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -58,6 +57,7 @@
         "rollup-plugin-replace": "^2.1.1",
         "rollup-plugin-terser": "^4.0.4",
         "rollup-plugin-typescript2": "^0.21.0",
+        "shx": "^0.3.2",
         "ts-jest": "^24.0.1",
         "tslint": "^5.14.0",
         "tslint-config-prettier": "^1.18.0",
