--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "typescript.tsdk": "./node_modules/typescript/lib",
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
-    }
+    },
+    "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"]
 }
