--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "0.52.0",
+    "version": "1.0.0",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "main": "dist/index.js",
     "jsnext:main": "dist/index.module.js",
@@ -14,7 +14,7 @@
     },
     "scripts": {
         "prettier": "prettier --write \"**/*.js\" \"**/*.ts\"",
-        "lint": "tslint --project .",
+        "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" \"test/**/*.tsx\"",
         "validate": "tsc --noEmit",
         "test": "jest --watch",
         "test:travis": "yarn validate && yarn lint && yarn coverage",
@@ -31,36 +31,36 @@
     "peerDependencies": {
         "mobx": "^4.0.0 || ^5.0.0",
         "react": "^16.8.0",
-        "react-dom": "^16.8.6"
+        "react-dom": "^16.8.0"
     },
     "devDependencies": {
+        "@testing-library/react": "^9.1.3",
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^24.0.11",
         "@types/node": "^12.0.0",
         "@types/react": "^16.8.10",
         "@types/react-dom": "^16.8.3",
         "coveralls": "^3.0.3",
+        "eslint": "^6.1.0",
+        "eslint-config-react-app": "^5.0.1",
         "hoist-non-react-statics": "^3.3.0",
-        "husky": "^2.1.0",
+        "husky": "^3.0.4",
         "jest": "^24.5.0",
-        "jest-mock-console": "^0.4.2",
+        "jest-mock-console": "^1.0.0",
         "mobx": "^5.9.4",
         "prettier": "^1.16.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-testing-library": "^7.0.0",
-        "rimraf": "^2.6.3",
+        "rimraf": "^3.0.0",
         "rollup": "^1.7.4",
         "rollup-plugin-alias": "^1.5.1",
-        "rollup-plugin-commonjs": "^9.2.1",
-        "rollup-plugin-node-resolve": "^4.0.1",
+        "rollup-plugin-commonjs": "^10.0.2",
+        "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-replace": "^2.1.1",
-        "rollup-plugin-terser": "^4.0.4",
-        "rollup-plugin-typescript2": "^0.21.0",
+        "rollup-plugin-terser": "^5.1.1",
+        "rollup-plugin-typescript2": "^0.22.1",
         "shx": "^0.3.2",
         "ts-jest": "^24.0.1",
-        "tslint": "^5.14.0",
-        "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.4.1"
     },
     "keywords": [
@@ -86,5 +86,8 @@
         "README.md",
         "CHANGELOG.md",
         "LICENSE"
-    ]
+    ],
+    "eslintConfig": {
+        "extends": "react-app"
+    }
 }
