--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -1,25 +1,31 @@
 {
-    "version": "2.0.10",
+    "include": ["src", "types"],
     "compilerOptions": {
-        "outDir": "dist",
-        "target": "es5",
+        "target": "esnext",
         "module": "esnext",
-        "moduleResolution": "node",
-        "downlevelIteration": true,
-        "esModuleInterop": true,
-        "alwaysStrict": true,
-        "sourceMap": false,
-        "removeComments": false,
+        "lib": ["dom", "esnext"],
+        "importHelpers": false,
+        "declaration": true,
+        "sourceMap": true,
+        "rootDir": "./",
         "strict": true,
-        "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": false,
         "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "strictPropertyInitialization": true,
         "noImplicitThis": true,
+        "alwaysStrict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "moduleResolution": "node",
+        "jsx": "react",
+        "esModuleInterop": true,
         "experimentalDecorators": true,
-        "lib": ["es6", "dom"],
-        "jsx": "react"
-    },
-    "include": ["src/**/*", "test/**/*", "samples/**/*"],
-    "exclude": ["node_modules"]
+        "emitDecoratorMetadata": false,
+        "skipLibCheck": true,
+        "noEmit": true,
+        "stripInternal": true
+    }
 }
