--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
     - yarn install --frozen-lockfile
 script:
     - cd packages/mobx-react-component
-    - CI=true yarn test:travis
+    - CI=true yarn travis
     - cat ./coverage/lcov.info|../../node_modules/coveralls/bin/coveralls.js
 node_js:
     - "node"
