--- a/packages/mobx-react-component/.gitignore
+++ b/packages/mobx-react-component/.gitignore
@@ -1,13 +1,8 @@
-*.md
-
+/*.log
+/.DS_Store
 /node_modules/
-
-dist/
-coverage/
-
-.rpt2_cache
-.DS_Store
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/.rts2_cache_*/
+/dist/
+/coverage/
+/README.md
+/LICENSE
