fix module names

--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -25,10 +25,10 @@
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "types": "dist/index.d.ts",
-    "jsnext:main": "dist/mobx-react-component.esm.js",
-    "module": "dist/mobx-react-component.esm.js",
-    "unpkg": "dist/mobx-react-component.umd.production.min.js",
-    "react-native": "dist/mobx-react-component.esm.js",
+    "jsnext:main": "dist/mobxreactcomponent.esm.js",
+    "module": "dist/mobxreactcomponent.esm.js",
+    "unpkg": "dist/mobxreactcomponent.umd.production.min.js",
+    "react-native": "dist/mobxreactcomponent.esm.js",
     "files": [
         "package.json",
         "dist",
