--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
         "packages/sample-app"
     ],
     "devDependencies": {
-        "prettier": "^1.16.4",
+        "@typescript-eslint/eslint-plugin": "^2.2.0",
+        "@typescript-eslint/parser": "^2.2.0",
         "coveralls": "^3.0.3",
-        "eslint": "^6.1.0"
+        "eslint": "^6.1.0",
+        "eslint-config-react-app": "^5.0.2",
+        "eslint-plugin-flowtype": "3.13.0",
+        "eslint-plugin-import": "2.18.2",
+        "eslint-plugin-jsx-a11y": "6.2.3",
+        "eslint-plugin-react": "7.14.3",
+        "eslint-plugin-react-hooks": "^1.6.1",
+        "prettier": "^1.16.4"
     }
 }
