--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "1.2.1",
+    "version": "2.0.0-beta.0",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "keywords": [
         "mobx",
