--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -7,7 +7,7 @@
         "importHelpers": false,
         "declaration": true,
         "sourceMap": true,
-        "rootDir": "./",
+        "rootDir": "./src",
         "strict": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
