--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "packages/sample-app"
     ],
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^2.8.0",
-        "@typescript-eslint/parser": "^2.8.0",
-        "coveralls": "^3.0.3",
+        "@typescript-eslint/eslint-plugin": "^2.10.0",
+        "@typescript-eslint/parser": "^2.10.0",
+        "babel-eslint": "10.1.0",
         "eslint": "^6.6.0",
         "eslint-config-react-app": "^5.2.1",
         "eslint-plugin-flowtype": "4.6.0",
@@ -18,6 +18,7 @@
         "eslint-plugin-jsx-a11y": "6.2.3",
         "eslint-plugin-react": "7.19.0",
         "eslint-plugin-react-hooks": "^1.6.1",
+        "coveralls": "^3.0.3",
         "prettier": "^2.0.4"
     }
 }
