--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "2.2.2",
+    "version": "2.3.0",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "keywords": [
         "mobx",
@@ -45,19 +45,19 @@
         "travis": "yarn build && yarn lint && yarn test -i --coverage"
     },
     "peerDependencies": {
-        "mobx": "^4.0.0 || ^5.0.0",
+        "mobx": "^4.0.0 || ^5.0.0 || ^6.0.0",
         "react": "^16.8.0",
         "react-dom": "^16.8.0"
     },
     "devDependencies": {
-        "@testing-library/react": "^10.0.2",
+        "@testing-library/react": "^11.0.4",
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^26.0.10",
         "@types/react": "^16.8.10",
         "@types/react-dom": "^16.8.3",
         "hoist-non-react-statics": "^3.3.0",
         "jest-mock-console": "^1.0.0",
-        "mobx": "^5.9.4",
+        "mobx": "^6.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "shx": "^0.3.2",
