enable useDefineForClassField config

--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -26,6 +26,7 @@
         "emitDecoratorMetadata": false,
         "skipLibCheck": true,
         "noEmit": true,
-        "stripInternal": true
+        "stripInternal": true,
+        "useDefineForClassFields": true
     }
 }
