--- a/packages/sample-app/tsconfig.json
+++ b/packages/sample-app/tsconfig.json
@@ -14,7 +14,8 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "preserve",
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "useDefineForClassFields": true
     },
     "include": ["src"]
 }
