--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -27,7 +27,6 @@
         "skipLibCheck": true,
         "noEmit": true,
         "stripInternal": true,
-        "useDefineForClassFields": true,
-        "downlevelIteration": true
+        "useDefineForClassFields": true
     }
 }
