--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobx-react-component",
-    "version": "2.3.1",
+    "version": "2.4.0",
     "description": "Write React functional components (with hooks) + MobX for local state in a fancy way",
     "keywords": [
         "mobx",
@@ -46,8 +46,8 @@
     },
     "peerDependencies": {
         "mobx": "^4.0.0 || ^5.0.0 || ^6.0.0",
-        "react": "^16.8.0",
-        "react-dom": "^16.8.0"
+        "react": "^16.8.0 || ^17.0.0",
+        "react-dom": "^16.8.0 || ^17.0.0"
     },
     "devDependencies": {
         "@testing-library/react": "^11.0.4",
@@ -55,11 +55,12 @@
         "@types/jest": "^26.0.10",
         "@types/react": "^16.8.10",
         "@types/react-dom": "^16.8.3",
+        "expose-gc": "^1.0.0",
         "hoist-non-react-statics": "^3.3.0",
         "jest-mock-console": "^1.0.0",
         "mobx": "^6.0.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "shx": "^0.3.2",
         "tsdx": "^0.14.1",
         "typescript": "^4.0.2"
