--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -25,8 +25,8 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": false,
         "skipLibCheck": true,
-        "noEmit": true,
         "stripInternal": true,
-        "useDefineForClassFields": true
+        "useDefineForClassFields": true,
+        "outDir": "dist-es"
     }
 }
