--- a/package.json
+++ b/package.json
@@ -8,21 +8,9 @@
         "packages/sample-app"
     ],
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.5.0",
-        "@typescript-eslint/parser": "^4.5.0",
-        "babel-eslint": "10.1.0",
         "coveralls": "^3.0.3",
-        "eslint": "^7.11.0",
-        "eslint-config-prettier": "^7.1.0",
-        "eslint-config-react-app": "^6.0.0",
-        "eslint-plugin-flowtype": "^5.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.1.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-react": "^7.21.5",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-testing-library": "^3.9.2",
-        "eslint-webpack-plugin": "^2.1.0",
-        "prettier": "^2.0.4"
+        "eslint-config-prettier": "^8.3.0",
+        "prettier": "^2.0.4",
+        "react-scripts": "^4.0.0"
     }
 }
