--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "coveralls": "^3.0.3",
         "eslint-config-prettier": "^8.3.0",
         "prettier": "^2.0.4",
-        "react-scripts": "^4.0.0"
-    }
+        "react-scripts": "^5.0.0"
+    },
+    "dependencies": {}
 }
