--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -65,18 +65,21 @@
     "devDependencies": {
         "@testing-library/react": "^12.0.0",
         "@types/hoist-non-react-statics": "^3.3.1",
-        "@types/jest": "^27.0.1",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
+        "@types/jest": "^27.4.1",
+        "@types/react": "^17.0.43",
+        "@types/react-dom": "^17.0.14",
+        "eslint-config-prettier": "^8.5.0",
         "expose-gc": "^1.0.0",
         "hoist-non-react-statics": "^3.3.0",
-        "jest-mock-console": "^1.0.0",
-        "mobx": "^6.0.0",
+        "jest-mock-console": "^1.2.3",
+        "mobx": "^6.5.0",
+        "prettier": "^2.6.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "shx": "^0.3.2",
+        "react-scripts": "^5.0.0",
+        "shx": "^0.3.4",
         "tsdx": "^0.14.1",
-        "typescript": "^4.0.2"
+        "typescript": "^4.6.3"
     },
     "dependencies": {},
     "directories": {
