--- a/packages/mobx-react-component/.gitignore
+++ b/packages/mobx-react-component/.gitignore
@@ -1,10 +1,12 @@
 /*.log
-/.DS_Store
+/**/.DS_Store
 /node_modules/
 /.rts2_cache_*/
 /dist/
-/dist-es/
+/dist-ssr/
 /coverage/
 /README.md
-/CHANGELOG.md
 /LICENSE
+/CHANGELOG.md
+/*.local
+/.swc
