--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -22,37 +22,49 @@
     },
     "license": "MIT",
     "author": "Javier González Garcés",
-    "main": "dist/index.js",
-    "umd:main": "dist/mobxreactcomponent.umd.production.min.js",
-    "unpkg": "dist/mobxreactcomponent.umd.production.min.js",
-    "jsdelivr": "dist/mobxreactcomponent.umd.production.min.js",
-    "jsnext:main": "dist/mobxreactcomponent.esm.js",
-    "module": "dist-es/index.js",
-    "react-native": "dist-es/index.js",
-    "types": "dist/index.d.ts",
-    "typings": "dist/index.d.ts",
+    "source": "./src/index.ts",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "import": {
+                "webpack": "./dist/mobx-react-component.es.js",
+                "default": "./dist/mobx-react-component.es.mjs"
+            },
+            "require": "./dist/mobx-react-component.umd.js",
+            "script": "./dist/mobx-react-component.umd.js",
+            "default": "./dist/mobx-react-component.es.mjs"
+        }
+    },
+    "esmodule": "./dist/mobx-react-component.es.mjs",
+    "module": "./dist/mobx-react-component.es.js",
+    "jsnext:main": "./dist/mobx-react-component.es.js",
+    "react-native": "./dist/mobx-react-component.es.js",
+    "umd:main": "./dist/mobx-react-component.umd.js",
+    "unpkg": "./dist/mobx-react-component.umd.js",
+    "jsdelivr": "./dist/mobx-react-component.umd.js",
+    "main": "./dist/mobx-react-component.umd.js",
+    "types": "./dist/index.d.ts",
+    "typings": "./dist/index.d.ts",
     "files": [
-        "package.json",
-        "dist/",
-        "dist-es/",
-        "README.md",
+        "src",
+        "dist",
+        "LICENSE",
         "CHANGELOG.md",
-        "LICENSE"
+        "README.md"
     ],
     "scripts": {
-        "start": "tsdx watch",
-        "build:copy-files": "shx cp ../../*.md . && shx cp ../../LICENSE .",
-        "build:es": "shx rm -rf dist-es && tsc -p . && shx rm -rf dist-es/**/*.d.ts",
-        "build:others": "tsdx build --name mobxReactComponent --format=cjs,esm,umd",
-        "build": "yarn build:copy-files && yarn build:es && yarn build:others",
-        "test": "tsdx test",
+        "quick-build": "tsc",
+        "quick-build-tests": "tsc -p test",
+        "copy-root-files": "shx cp ../../README.md . && shx cp ../../LICENSE . && shx cp ../../CHANGELOG.md .",
+        "build": "yarn quick-build && yarn copy-root-files && shx rm -rf dist && vite build && shx cp ./dist/mobx-react-component.es.js ./dist/mobx-react-component.es.mjs",
+        "test": "jest",
         "prettier": "prettier --write \"**/*.js\" \"**/*.ts\" \"**/*.tsx\"",
         "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" \"test/**/*.tsx\"",
         "travis": "yarn build && yarn lint && yarn test -i --coverage"
     },
     "peerDependencies": {
         "mobx": "^4.0.0 || ^5.0.0 || ^6.0.0",
-        "react": "^16.8.0 || ^17.0.0"
+        "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
     },
     "peerDependenciesMeta": {
         "react-dom": {
@@ -63,23 +75,25 @@
         }
     },
     "devDependencies": {
-        "@testing-library/react": "^12.0.0",
+        "@testing-library/react": "^13.0.1",
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^27.4.1",
-        "@types/react": "^17.0.43",
-        "@types/react-dom": "^17.0.14",
+        "@types/react": "^18.0.4",
+        "@types/react-dom": "^18.0.0",
         "eslint-config-prettier": "^8.5.0",
         "expose-gc": "^1.0.0",
         "hoist-non-react-statics": "^3.3.0",
         "jest-mock-console": "^1.2.3",
         "mobx": "^6.5.0",
-        "prettier": "^2.6.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-scripts": "^5.0.0",
+        "prettier": "^2.6.2",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-scripts": "^5.0.1",
+        "rollup-plugin-typescript2": "^0.31.2",
         "shx": "^0.3.4",
-        "tsdx": "^0.14.1",
-        "typescript": "^4.6.3"
+        "ts-jest": "^27.1.4",
+        "typescript": "^4.6.3",
+        "vite": "^2.9.3"
     },
     "dependencies": {},
     "directories": {
