--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -1,12 +1,16 @@
 {
-    "include": ["src", "types"],
     "compilerOptions": {
-        "target": "es5",
+        "target": "esnext",
         "module": "esnext",
         "lib": ["dom", "esnext"],
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "noEmit": true,
         "importHelpers": false,
         "declaration": true,
-        "sourceMap": true,
+        "declarationDir": "./dist",
         "rootDir": "./src",
         "strict": true,
         "noImplicitAny": true,
@@ -19,15 +23,17 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "moduleResolution": "node",
+        "baseUrl": "./",
+        "paths": {
+            "*": ["src/*", "node_modules/*"]
+        },
         "jsx": "react",
-        "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": false,
         "skipLibCheck": true,
         "stripInternal": true,
         "useDefineForClassFields": true,
-        "downlevelIteration": true,
-        "outDir": "dist-es"
-    }
+        "isolatedModules": true
+    },
+    "include": ["./src"]
 }
