--- a/packages/mobx-react-component/package.json
+++ b/packages/mobx-react-component/package.json
@@ -80,6 +80,7 @@
         "@types/jest": "^27.4.1",
         "@types/react": "^18.0.4",
         "@types/react-dom": "^18.0.0",
+        "@types/use-sync-external-store": "^0.0.3",
         "eslint-config-prettier": "^8.5.0",
         "expose-gc": "^1.0.0",
         "hoist-non-react-statics": "^3.3.0",
@@ -95,7 +96,9 @@
         "typescript": "^4.6.3",
         "vite": "^2.9.3"
     },
-    "dependencies": {},
+    "dependencies": {
+        "use-sync-external-store": "^1.0.0"
+    },
     "directories": {
         "test": "test"
     }
