--- a/packages/mobx-react-component/tsconfig.json
+++ b/packages/mobx-react-component/tsconfig.json
@@ -10,7 +10,7 @@
         "noEmit": true,
         "importHelpers": false,
         "declaration": true,
-        "declarationDir": "./dist",
+        "declarationDir": "./dist/types",
         "rootDir": "./src",
         "strict": true,
         "noImplicitAny": true,
