--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
